# docs/swagger.json
@@ -3,7 +3,6 @@
     "info": {
         "description": "API realizada para enviar o recibir mensajes y seguir a otros usuarios.",
         "title": "Ejercicio UALA",
-        "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "Cornejo Franco",
             "email": "cornejo.francodavid@gmail.com"
@@ -13,6 +12,108 @@
     "host": "localhost:8080",
     "basePath": "/microblog",
     "paths": {
+        "/follow": {
+            "post": {
+                "description": "Seguir a otros usuarios",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Endpoints"
+                ],
+                "parameters": [
+                    {
+                        "description": "Body para seguir al usuario deseado",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UsernameFollower"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Follower"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMessage"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMessage"
+                        }
+                    },
+                    "503": {
+                        "description": "Service Unavailable",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMessage"
+                        }
+                    }
+                }
+            }
+        },
+        "/messages": {
+            "get": {
+                "description": "Obtener mensajes de los usuarios a los que sigue",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Endpoints"
+                ],
+                "parameters": [
+                    {
+                        "description": "Body para obtener mensajes de los usuarios a los que sigue",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Timeline"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Follower"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMessage"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMessage"
+                        }
+                    },
+                    "503": {
+                        "description": "Service Unavailable",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMessage"
+                        }
+                    }
+                }
+            }
+        },
         "/send": {
             "post": {
                 "description": "Envio de mensajes",
@@ -21,6 +122,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Endpoints"
                 ],
                 "parameters": [
                     {
@@ -91,6 +195,20 @@
                 }
             }
         },
+        "models.Follower": {
+            "type": "object",
+            "properties": {
+                "followerID": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "userID": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Message": {
             "type": "object",
             "properties": {
@@ -102,6 +220,32 @@
                     "maxLength": 250
                 },
                 "timestamp": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Timeline": {
+            "type": "object",
+            "required": [
+                "username"
+            ],
+            "properties": {
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UsernameFollower": {
+            "type": "object",
+            "required": [
+                "followerUsername",
+                "username"
+            ],
+            "properties": {
+                "followerUsername": {
                     "type": "string"
                 },
                 "username": {
